# ChangeLog for app-admin/eselect
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.90 2009/05/18 15:58:22 fauli Exp $

  18 May 2009; Christian Faulhammer <fauli@gentoo.org>
  eselect-1.0.12.ebuild:
  stable x86, bug 270138

  18 May 2009; Jeroen Roovers <jer@gentoo.org> eselect-1.0.12.ebuild:
  Stable for HPPA (bug #270138).

  17 May 2009; Tobias Klausmann <klausman@gentoo.org> eselect-1.0.12.ebuild:
  Stable on alpha, bug #270138

  28 Apr 2009; Ulrich Mueller <ulm@gentoo.org> metadata.xml, eselect-9999:
  Add paludis USE flag for the live ebuild.

*eselect-9999 (18 Apr 2009)
*eselect-1.0.12 (18 Apr 2009)

  18 Apr 2009; Ulrich Mueller <ulm@gentoo.org> +eselect-1.0.12.ebuild,
  +eselect-9999.ebuild:
  Version bump to 1.0.12; fixes bugs 172636, 198461, 203114, 204937, 218557,
  219864, 232874, 240402, 248470, 248487, 260464, and 264734. Add live ebuild
  for SVN trunk. Remove dependencies on editor modes, since only few users of
  eselect will edit its source.

  17 Apr 2009; Ulrich Mueller <ulm@gentoo.org> eselect-1.0.11-r1.ebuild,
  eselect-1.0.11-r2.ebuild:
  Clarify the elog message in pkg_postinst, bug 187263. Remove the dependency
  on procps (added at 14 April) again, since it leads to problems on FreeBSD;
  bug 266540. In fact, a working "pgrep" command is not essential, since it is
  only called from the "die" function. See bug 264734 for details.

  15 Apr 2009; Ulrich Mueller <ulm@gentoo.org>
  -files/eselect-1.0.8-fix-parallel-install.patch:
  Remove stale file.

  14 Apr 2009; Ulrich Mueller <ulm@gentoo.org> eselect-1.0.11-r2.ebuild:
  Add procps to RDEPEND, fixes bug 174354.

  08 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  +files/eselect-1.0.11-relative-profiles.patch, eselect-1.0.11-r2.ebuild:
  Make 'eselect profile show' show the relative path. Patch by Thomas Bellman
  in bug 248487

*eselect-1.0.11-r2 (08 Apr 2009)
